re-structed social icons and fixed spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import 'utilities.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Open+Sans&display=swap');
 :root{
     --primary:#3DCFD3;
     --dark:#161616;
@@ -18,7 +20,7 @@
 header{
     background-color: var(--dark);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 80% 90%, 0 100%);
-    height: 600px;
+    height: 700px;
     font-family: 'Poppins',sans-serif;
     
 }
@@ -48,11 +50,12 @@ header nav{
 .aboutme{
     padding: 3rem 0;
 }
+
 .aboutme .left img{
+    width: 300px;
     width: 400px;
     height: 400px;
     padding: 0.8rem 3rem;
-
 }
 .aboutme .right{
     color: var(--pure);
@@ -64,13 +67,14 @@ header nav{
     line-height: 1.9rem;
     margin-bottom: 0.5rem;
 }
-.aboutme .right a{
+/*.aboutme .right a{
     padding-right: 2rem;
-    background: var(--dark);
     transition: all .3s ease;
     cursor: pointer;
-    border-radius: 100%;
-}
+    background: var(--pure);
+    
+}*/
+
 /*.projects .container{
     background-color:white;
 }*/
@@ -83,23 +87,21 @@ header nav{
     margin-bottom: 3rem;
     text-align: center;
 }
-.projects .container h3{
+.projects .container h2{
     font-family: 'Poppins',sans-serif;
     margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    /*margin-bottom: rem;*/
     text-align: left;
     color: var(--dark);
     font-weight: bold;
 }
 .projects .container p{
     font-family: 'Poppins',sans-serif;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     text-align: left;
     color: var(--dark);
-    font-weight:inherit;
-
-
+    font-weight:solid;
 }
 .projects .container .technology{
     font-family: 'Poppins',sans-serif;
@@ -118,10 +120,10 @@ header nav{
     text-align: center;
 
 }
-.skills .container h3{
+.skills .container h2{
     font-family: 'Poppins',sans-serif;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 1rem;
+    /*margin-bottom: 0.5rem;*/
     text-align: left;
     color: var(--dark);
     font-weight: bold;
@@ -129,11 +131,11 @@ header nav{
 }
 .skills .container p{
     font-family: 'Poppins',sans-serif;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    /*margin-top: 0.5rem;
+    margin-bottom: 0.5rem;*/
     text-align: left;
     color: var(--dark);
-    font-weight:inherit;
+    font-weight:solid;
 }
 section.contact .card-wrapper{
     display:grid;
@@ -163,29 +165,50 @@ section.contact .card-wrapper .card h6{
     font-weight: 4rem;
     margin-bottom: 2rem;
 }
-footer{
+
+/*footer{
     background: var(--dark);
-    text-align:center;
-    position: absolute;
-    padding:5rem,0; 
-    width: 100%
+    height: auto;
+    width: 100%;
+    font-family:'Poppins',sans-serif; 
+    color:var(--pure);
+    /*padding-top: 2rem;
+    padding-bottom: 5rem;
+    position: absolute;  
+    
+}*/
+
+
+.site-footer
+{
+  background-color:var(--dark);
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:var(--pure);
+  width: 100%;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.footer-p1{
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    font-size: 2rem;
+    color: var(--pure);
    
 }
-footer .footer-icon{
-    padding:5rem,0; 
-    margin-right: 8rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    width: 100%;
-    
-}
-footer h6{
-
-    font-family: 'Poppins',sans-serif;
-    color: var(--pure);
-    font-weight:lighter;
+.footer-p2{
+    text-align: center;
+    font-family: 'Poppins',sans-serif; 
     font-size: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem; 
-
+    color: var(--pure);
+    margin-bottom: 1rem;
+   
+}
+.copyright-text{
+    text-align: center;
+    margin-top: 1rem;
 }
